lib/parser/parser.dart
import 'dart:collection';

import 'data_type.dart';
import '../ast/ast_node.dart';
import '../ast/ast_types.dart';
import '../utils/constants.dart';
import '../utils/exceptions.dart';
import '../lexer/lexer.dart';
import '../utils/scope.dart';
import '../lexer/token.dart';

class Parser {
  Parser(this.lexer) {
    curToken = lexer.getNextToken();
  }

  Lexer lexer;
  Token prevToken;
  Token curToken;
  DataType dataType;

  /// Throws an UnexpectedTypeException
  void parserTypeError() => throw UnexpectedTypeException(
      '[Line ${lexer.lineNum}] Invalid type');

  /// Throws a SyntaxException
  void parserSyntaxError() =>
      throw SyntaxException('[Line ${lexer.lineNum}] Syntax error');

  /// Throws a UnexpectedTokenException
  void parserUnexpectedToken(TokenType type) => throw UnexpectedTokenException(
      '[Line ${lexer.lineNum}] Unexpected token `${curToken.value}`, was expecting `$type`');

  /// Sets the ast to be a child of a class
  ASTNode asClassChild(ASTNode ast, ASTNode object) {
    ast.isClassChild = true;
    ast.parent = object;
    return ast;
  }

  /// Check if the token is a DataType
  bool isDataType() {
    final String tokenValue = curToken.value;

    final List<String> dataTypes = [
      'void',
      'var',
      'type',
      'int',
      'string',
      'StrBuffer',
      'double',
      'bool',
      'class',
      'interface',
      'enum',
      'List',
      'Map',
      'Source'
    ];

    final int lineNum = lexer.lineNum;
    final int curIndex = lexer.currentIndex;
    final String curChar = lexer.currentChar;

    final bool isDot = lexer.getNextToken().type == TokenType.TOKEN_DOT;

    lexer
      ..lineNum = lineNum
      ..currentIndex = curIndex
      ..currentChar = curChar;

    for (final String type in dataTypes) {
      if (!isDot && type == tokenValue || type + '?' == tokenValue) {
        return true;
      }
    }

    return false;
  }

  /// Check if the current token is a variable modifier
  bool isModifier(String tokenValue) {
    return tokenValue == Constants.CONST || tokenValue == Constants.FINAL;
  }

  /// Parses a single statement compound
  /// ie:
  /// ```dart
  ///  if (. . .)
  ///   screm("foo")
  /// ```
  ASTNode parseOneStatementCompound(Scope scope) {
    final compound = initASTWithLine(CompoundNode(), lexer.lineNum);
    compound.scope = scope;

    final statement = parseStatement(scope);
    compound.compoundValue.add(statement);

    return compound;
  }

  ASTNode parse({Scope scope}) {
    return parseStatements(scope);
  }

  /// eat the current token and get the next one
  void eat(TokenType type) {
    if (curToken.type != type) {
      parserUnexpectedToken(type);
    } else {
      prevToken = curToken;
      curToken = lexer.getNextToken();
    }
  }

  /// parse a statement
  ASTNode parseStatement(Scope scope) {
    switch (curToken.type) {
      case TokenType.TOKEN_ID:
        {
          final tokenValue = curToken.value;

          if (isModifier(tokenValue)) {
            eat(TokenType.TOKEN_ID);
            if (tokenValue == Constants.FINAL) {
              return parseDefinition(scope, false, true);
            }

            return parseDefinition(scope, true);
          }

          if (isDataType()) {
            return parseDefinition(scope);
          }

          switch (tokenValue) {
            case Constants.WHILE:
              return parseWhile(scope);
            case Constants.FOR:
              return parseFor(scope);
            case Constants.IF:
              return parseIf(scope);
            case Constants.SWITCH:
              return parseSwitch(scope);
            case Constants.FALSE:
            case Constants.TRUE:
              return parseBool(scope);
            case Constants.NULL:
              return parseNull(scope);
            case Constants.RETURN:
              return parseReturn(scope);
            case Constants.THROW:
              return parseThrow(scope);
            case Constants.BREAK:
              return parseBreak(scope);
            case Constants.NEXT:
              return parseNext(scope);
            case Constants.NEW:
              return parseNew(scope);
            case Constants.ITERATE:
              return parseIterate(scope);
            case Constants.ASSERT:
              return parseAssert(scope);
          }

          eat(TokenType.TOKEN_ID);

          var a = parseVariable(scope);

          while (curToken.type == TokenType.TOKEN_LPAREN) {
            a = parseFunctionCall(scope, a);
          }

          while (curToken.type == TokenType.TOKEN_DOT) {
            eat(TokenType.TOKEN_DOT);

            final ast =
                initASTWithLine(AttributeAccessNode(), lexer.lineNum)
                  ..binaryOpLeft = a;

            eat(TokenType.TOKEN_ID);

            final varAST = parseVariable(scope);

            ast.binaryOpRight = curToken.type == TokenType.TOKEN_LPAREN
                ? parseFunctionCall(scope, varAST)
                : varAST;
            a = ast;
          }

          while (curToken.type == TokenType.TOKEN_LBRACKET) {
            final astListAccess =
                initASTWithLine(ListAccessNode(), lexer.lineNum);
            astListAccess.binaryOpLeft = a;
            eat(TokenType.TOKEN_LBRACKET);

            astListAccess.listAccessPointer = parseExpression(scope);

            eat(TokenType.TOKEN_RBRACKET);

            a = astListAccess;
          }

          if (a != null) {
            return a;
          }
        }
        break;
      case TokenType.TOKEN_LESS_THAN:
        eat(TokenType.TOKEN_LESS_THAN);

        final String annotation = curToken.value;
        eat(TokenType.TOKEN_ID);

        eat(TokenType.TOKEN_GREATER_THAN);

        switch (annotation) {
          case Constants.SUPERSEDE:
            return parseDefinition(scope, curToken.value == 'const',
                curToken.value == 'final', true);
          default:
            throw UnexpectedTokenException(
                'No annotation ${curToken.value} found!');
        }
        break;
      case TokenType.TOKEN_NUMBER_VALUE:
      case TokenType.TOKEN_STRING_VALUE:
      case TokenType.TOKEN_DOUBLE_VALUE:
      case TokenType.TOKEN_INT_VALUE:
        return parseExpression(scope);
      case TokenType.TOKEN_PLUS_PLUS:
      case TokenType.TOKEN_SUB_SUB:
      case TokenType.TOKEN_MUL_MUL:
        {
          final Token operator = curToken;
          eat(operator.type);

          final ASTNode astVarMod =
              initASTWithLine(VarModNode(), lexer.lineNum)
                ..binaryOpRight = parseStatement(scope)
                ..binaryOperator = operator
                ..scope = scope;

          return astVarMod;
        }
        break;
      case TokenType.TOKEN_LBRACE:
        final int lineNum = lexer.lineNum;
        while (curToken.type != TokenType.TOKEN_RBRACE) {
          if (lexer.currentIndex == lexer.program.length) {
            throw UnexpectedTokenException(
                '[Lines $lineNum-${lexer.lineNum}] No closing brace `}` was found');
          }
          eat(curToken.type);
        }
        eat(TokenType.TOKEN_RBRACE);

        return initASTWithLine(NoopNode(), lineNum);

      case TokenType.TOKEN_LBRACKET:
        return parseList(scope);

      default:
        return initASTWithLine(NoopNode(), lexer.lineNum);
    }

    return initASTWithLine(NoopNode(), lexer.lineNum);
  }

  /// parse statements
  ASTNode parseStatements(Scope scope) {
    final compound = initASTWithLine(CompoundNode(), lexer.lineNum);
    compound.scope = scope;

    ASTNode statement = parseStatement(scope);

    compound.compoundValue.add(statement);

    while (curToken.type == TokenType.TOKEN_SEMI ||
        prevToken?.type == TokenType.TOKEN_RBRACE &&
            statement.type != ASTType.AST_NOOP) {
      if (curToken.type == TokenType.TOKEN_SEMI) {
        eat(TokenType.TOKEN_SEMI);
      }

      statement = parseStatement(scope);

      compound.compoundValue.add(statement);
    }

    if (curToken.type != TokenType.TOKEN_RBRACE &&
        lexer.currentIndex != lexer.program.length) {
      throw UnexpectedTokenException(
          'Error [Line ${lexer.lineNum}]: Expected `;` but found `${curToken.value}`');
    }

    return compound;
  }

  /// parse type
  ASTNode parseType(Scope scope) {
    final ASTNode astType = initASTWithLine(TypeNode(), lexer.lineNum)
      ..scope = scope;

    final type = DataType();

    var tokenValue = curToken.value;

    if (tokenValue.endsWith('?')) {
      tokenValue = tokenValue.replaceRange(
          tokenValue.length - 1, tokenValue.length, '');
    }

    switch (tokenValue) {
      case 'void':
        type.type = DATATYPE.DATA_TYPE_VOID;
        break;
      case 'string':
        type.type = DATATYPE.DATA_TYPE_STRING;
        break;
      case 'StrBuffer':
        type.type = DATATYPE.DATA_TYPE_STRING_BUFFER;
        break;
      case 'var':
        type.type = DATATYPE.DATA_TYPE_VAR;
        break;
      case 'type':
        type.type = DATATYPE.DATA_TYPE_VAR;
        break;
      case 'int':
        type.type = DATATYPE.DATA_TYPE_INT;
        break;
      case 'double':
        type.type = DATATYPE.DATA_TYPE_DOUBLE;
        break;
      case 'bool':
        type.type = DATATYPE.DATA_TYPE_BOOL;
        break;
      case 'class':
        type.type = DATATYPE.DATA_TYPE_CLASS;
        break;
      case 'interface':
        type.type = DATATYPE.DATA_TYPE_INTERFACE;
        break;
      case 'enum':
        type.type = DATATYPE.DATA_TYPE_ENUM;
        break;
      case 'List':
        type.type = DATATYPE.DATA_TYPE_LIST;
        break;
      case 'Map':
        type.type = DATATYPE.DATA_TYPE_MAP;
        break;
      case 'Source':
        type.type = DATATYPE.DATA_TYPE_SOURCE;
        break;
    }

    astType.typeValue = type;

    eat(TokenType.TOKEN_ID);

    return astType;
  }

  /// parse double
  ASTNode parseDouble(Scope scope) {
    final ast = initASTWithLine(DoubleNode(), lexer.lineNum);
    ast.scope = scope;
    ast.doubleVal = double.parse(curToken.value);

    eat(TokenType.TOKEN_DOUBLE_VALUE);

    return ast;
  }

  /// parse string
  ASTNode parseString(Scope scope) {
    final ast = initASTWithLine(StringNode(), lexer.lineNum)
      ..scope = scope
      ..stringValue = curToken.value;

    eat(TokenType.TOKEN_STRING_VALUE);

    return ast;
  }

  /// parse int
  ASTNode parseInt(Scope scope) {
    final ast = initASTWithLine(IntNode(), lexer.lineNum)
      ..scope = scope
      ..intVal = int.tryParse(curToken.value);

    eat(TokenType.TOKEN_INT_VALUE);

    return ast;
  }

  /// parse bool
  ASTNode parseBool(Scope scope) {
    final ast = initASTWithLine(BoolNode(), lexer.lineNum)..scope = scope;

    if (curToken.value == 'false' || curToken.value == 'true') {
      ast.boolVal = curToken.value == 'true';
    } else {
      print('Expected a boolean value, but got ${curToken.value}');
    }

    eat(TokenType.TOKEN_ID);

    return ast;
  }

  /// parse null
  ASTNode parseNull(Scope scope) {
    final ast = initASTWithLine(NoSeebNode(), lexer.lineNum)
      ..scope = scope;

    eat(TokenType.TOKEN_ID);

    return ast;
  }

  /// parse variable
  ASTNode parseVariable(Scope scope) {
    final ast = initASTWithLine(VariableNode(), lexer.lineNum)
      ..scope = scope
      ..variableName = prevToken.value;

    if (curToken.type == TokenType.TOKEN_RBRACE) {
      final astAssign = initASTWithLine(VarAssignmentNode(), lexer.lineNum)
        ..variableAssignmentLeft = ast
        ..variableValue = parseExpression(scope)
        ..scope = scope;

      return astAssign;
    }

    if (curToken.type == TokenType.TOKEN_EQUAL) {
      eat(TokenType.TOKEN_EQUAL);
      final astAssign =
          initASTWithLine(VarAssignmentNode(), lexer.lineNum);
      astAssign.variableAssignmentLeft = ast;
      astAssign.variableValue = parseExpression(scope);
      astAssign.scope = scope;

      return astAssign;
    }
    if (curToken.type == TokenType.TOKEN_PLUS_PLUS ||
        curToken.type == TokenType.TOKEN_SUB_SUB ||
        curToken.type == TokenType.TOKEN_MUL_MUL) {
      final Token operator = curToken;

      eat(operator.type);

      final ASTNode astVarMod =
          initASTWithLine(VarModNode(), lexer.lineNum)
            ..binaryOpLeft = ast
            ..binaryOperator = operator
            ..scope = scope;

      return astVarMod;
    } else if (curToken.type == TokenType.TOKEN_PLUS_EQUAL ||
        curToken.type == TokenType.TOKEN_SUB_EQUAL ||
        curToken.type == TokenType.TOKEN_MUL_EQUAL ||
        curToken.type == TokenType.TOKEN_DIV_EQUAL ||
        curToken.type == TokenType.TOKEN_MOD_EQUAL ||
        curToken.type == TokenType.TOKEN_NOSEEB_ASSIGNMENT) {
      final Token operator = curToken;

      eat(operator.type);

      final ASTNode astVarMod =
          initASTWithLine(VarModNode(), lexer.lineNum)
            ..binaryOpLeft = ast
            ..binaryOpRight = parseExpression(scope)
            ..binaryOperator = operator
            ..scope = scope;

      return astVarMod;
    }

    return ast;
  }

  /// parse braces
  ASTNode parseBrace(Scope scope) {
    if (prevToken.type != TokenType.TOKEN_ID) {
      return parseMap(scope);
    }

    return parseClass(scope);
  }

  /// parse class
  ASTNode parseClass(Scope scope) {
    final ASTNode ast = initASTWithLine(ClassNode(), lexer.lineNum)
      ..scope = scope
      ..className = prevToken.value
      ..classChildren = ListQueue();

    final newScope = Scope(false);

    if (scope != null && scope.owner != null) {
      newScope.owner = scope.owner;
    }

    eat(TokenType.TOKEN_LBRACE);

    if (curToken.type != TokenType.TOKEN_RBRACE) {
      if (curToken.type == TokenType.TOKEN_ID ||
          curToken.type == TokenType.TOKEN_LESS_THAN) {
        ast.classChildren
            .add(asClassChild(parseDefinition(newScope), ast));
      }

      while (curToken.type == TokenType.TOKEN_SEMI ||
          (prevToken.type == TokenType.TOKEN_RBRACE &&
              curToken.type != TokenType.TOKEN_RBRACE)) {
        if (curToken.type == TokenType.TOKEN_SEMI) {
          eat(TokenType.TOKEN_SEMI);
        }

        if (curToken.type == TokenType.TOKEN_ID ||
            curToken.type == TokenType.TOKEN_LESS_THAN) {
          ast.classChildren
              .add(asClassChild(parseDefinition(newScope), ast));
        }
      }
    }

    eat(TokenType.TOKEN_RBRACE);

    return ast;
  }

  /// e.g.
  /// enum Color {
  ///  red,
  /// green,
  /// blue
  /// }
  /// parse enums
  ASTNode parseEnum(Scope scope) {
    final ast = initASTWithLine(EnumNode(), lexer.lineNum);
    ast.scope = scope;
    ast.enumElements = [];

    final newScope = Scope(false);

    if (scope != null) {
      if (scope.owner != null) {
        newScope.owner = scope.owner;
      }
    }

    eat(TokenType.TOKEN_LBRACE);

    if (curToken.type != TokenType.TOKEN_RBRACE) {
      if (curToken.type == TokenType.TOKEN_ID) {
        eat(TokenType.TOKEN_ID);
        ast.enumElements.add(parseVariable(newScope));
      }

      while (curToken.type == TokenType.TOKEN_COMMA) {
        eat(TokenType.TOKEN_COMMA);

        if (curToken.type == TokenType.TOKEN_ID) {
          eat(TokenType.TOKEN_ID);
          ast.enumElements.add(parseVariable(newScope));
        }
      }
    }

    eat(TokenType.TOKEN_RBRACE);

    return ast;
  }

  /// parse maps
  ASTNode parseMap(Scope scope) {
    eat(TokenType.TOKEN_LBRACE);

    final ast = initASTWithLine(MapNode(), lexer.lineNum);
    ast.scope = scope;
    ast.map = {};

    if (curToken.type != TokenType.TOKEN_RBRACE) {
      if (curToken.type == TokenType.TOKEN_STRING_VALUE) {
        final String key = curToken.value;
        eat(TokenType.TOKEN_STRING_VALUE);

        if (curToken.type == TokenType.TOKEN_COLON) {
          eat(TokenType.TOKEN_COLON);
        } else {
          throw UnexpectedTokenException(
              'Error: [Line ${lexer.lineNum}] Unexpected token `${curToken.value}`, expected `:`.');
        }

        if (curToken.type == TokenType.TOKEN_COMMA) {
          throw UnexpectedTokenException(
              'Error: [Line ${lexer.lineNum}] Expected value for key `$key`');
        }
        ast.map[key] = parseExpression(scope);
      } else {
        throw UnexpectedTokenException(
            'Error: [Line ${lexer.lineNum}] Maps can only hold strings as keys.');
      }
    }

    while (curToken.type == TokenType.TOKEN_COMMA) {
      eat(TokenType.TOKEN_COMMA);

      final String key = curToken.value;
      eat(TokenType.TOKEN_STRING_VALUE);

      if (curToken.type == TokenType.TOKEN_COLON) {
        eat(TokenType.TOKEN_COLON);
      } else {
        throw UnexpectedTokenException(
            'Error: [Line ${lexer.lineNum}] Unexpected token `${curToken.value}`, expected `:`.');
      }

      if (curToken.type == TokenType.TOKEN_COMMA) {
        throw UnexpectedTokenException(
            'Error: [Line ${lexer.lineNum}] Expected value for key `$key`');
      }

      ast.map[key] = parseExpression(scope);
    }

    eat(TokenType.TOKEN_RBRACE);
    return ast;
  }

  /// parse array
  ASTNode parseList(Scope scope) {
    eat(TokenType.TOKEN_LBRACKET);
    final ast = initASTWithLine(ListNode(), lexer.lineNum);
    ast.scope = scope;
    ast.listElements = [];

    if (curToken.type != TokenType.TOKEN_RBRACKET) {
      ast.listElements.add(parseExpression(scope));
    }

    while (curToken.type == TokenType.TOKEN_COMMA) {
      eat(TokenType.TOKEN_COMMA);
      ast.listElements.add(parseExpression(scope));
    }

    eat(TokenType.TOKEN_RBRACKET);
    return ast;
  }

  ASTNode parseFactor(Scope scope, bool isMap) {
    while (curToken.type == TokenType.TOKEN_PLUS ||
        curToken.type == TokenType.TOKEN_SUB ||
        curToken.type == TokenType.TOKEN_PLUS_PLUS ||
        curToken.type == TokenType.TOKEN_SUB_SUB ||
        curToken.type == TokenType.TOKEN_NOT ||
        curToken.type == TokenType.TOKEN_ONES_COMPLEMENT) {
      final unOpOperator = curToken;
      eat(unOpOperator.type);

      final ast = initASTWithLine(UnaryOpNode(), lexer.lineNum);
      ast.scope = scope;
      ast.unaryOperator = unOpOperator;
      ast.unaryOpRight = parseTerm(scope);

      return ast;
    }

    if (curToken.type == TokenType.TOKEN_ID) {
      switch (curToken.value) {
        case Constants.TRUE:
        case Constants.FALSE:
          return parseBool(scope);
        case Constants.NULL:
          return parseNull(scope);
        case Constants.NEW:
          return parseNew(scope);
      }
    }

    if (curToken.type == TokenType.TOKEN_PLUS ||
        curToken.type == TokenType.TOKEN_SUB ||
        curToken.type == TokenType.TOKEN_PLUS_PLUS ||
        curToken.type == TokenType.TOKEN_SUB_SUB ||
        curToken.type == TokenType.TOKEN_NOT ||
        curToken.type == TokenType.TOKEN_BITWISE_AND ||
        curToken.type == TokenType.TOKEN_BITWISE_OR ||
        curToken.type == TokenType.TOKEN_BITWISE_XOR ||
        curToken.type == TokenType.NOSEEB_AWARE_OPERATOR ||
        curToken.type == TokenType.TOKEN_LSHIFT ||
        curToken.type == TokenType.TOKEN_RSHIFT) {
      eat(curToken.type);

      var a = parseVariable(scope).binaryOpRight;

      while (curToken.type == TokenType.TOKEN_DOT) {
        eat(TokenType.TOKEN_DOT);
        final ast = initASTWithLine(AttributeAccessNode(), lexer.lineNum);
        ast.binaryOpLeft = a;
        eat(TokenType.TOKEN_ID);
        final varAST = parseVariable(scope);
        ast.binaryOpRight = curToken.type == TokenType.TOKEN_LPAREN
            ? parseFunctionCall(scope, varAST)
            : varAST;
        a = ast;
      }

      while (curToken.type == TokenType.TOKEN_DOT) {
        eat(TokenType.TOKEN_DOT);
        final ast = initASTWithLine(AttributeAccessNode(), lexer.lineNum);
        ast.binaryOpLeft = a;
        eat(TokenType.TOKEN_ID);
        final varAST = parseVariable(scope);
        ast.binaryOpRight = curToken.type == TokenType.TOKEN_LPAREN
            ? parseFunctionCall(scope, varAST)
            : varAST;
        a = ast;
      }

      while (curToken.type == TokenType.TOKEN_LBRACKET) {
        final astListAccess =
            initASTWithLine(ListAccessNode(), lexer.lineNum);
        astListAccess.binaryOpLeft = a;

        eat(TokenType.TOKEN_LBRACKET);
        astListAccess.listAccessPointer = parseExpression(scope);
        eat(TokenType.TOKEN_RBRACKET);

        a = astListAccess;
      }

      while (curToken.type == TokenType.TOKEN_LPAREN) {
        a = parseFunctionCall(scope, a);
      }

      if (a != null) {
        return a;
      }
    }

    if (curToken.type == TokenType.TOKEN_ID) {
      eat(curToken.type);

      var a = parseVariable(scope);

      while (curToken.type == TokenType.TOKEN_DOT) {
        eat(TokenType.TOKEN_DOT);
        final ast = initASTWithLine(AttributeAccessNode(), lexer.lineNum);
        ast.binaryOpLeft = a;
        eat(TokenType.TOKEN_ID);
        final varAST = parseVariable(scope);
        ast.binaryOpRight = curToken.type == TokenType.TOKEN_LPAREN
            ? parseFunctionCall(scope, varAST)
            : varAST;
        a = ast;
      }

      while (curToken.type == TokenType.TOKEN_LBRACKET) {
        final astListAccess =
            initASTWithLine(ListAccessNode(), lexer.lineNum);
        astListAccess.binaryOpLeft = a;

        eat(TokenType.TOKEN_LBRACKET);
        astListAccess.listAccessPointer = parseExpression(scope);
        eat(TokenType.TOKEN_RBRACKET);

        a = astListAccess;
      }

      while (curToken.type == TokenType.TOKEN_LPAREN) {
        a = parseFunctionCall(scope, a);
      }

      if (a != null) {
        return a;
      }
    }

    /* */
    if (curToken.type == TokenType.TOKEN_LPAREN) {
      eat(TokenType.TOKEN_LPAREN);
      final astExpression = parseExpression(scope);
      eat(TokenType.TOKEN_RPAREN);

      return astExpression;
    }

    switch (curToken.type) {
      case TokenType.TOKEN_NUMBER_VALUE:
      case TokenType.TOKEN_INT_VALUE:
        return parseInt(scope);
      case TokenType.TOKEN_DOUBLE_VALUE:
        return parseDouble(scope);
      case TokenType.TOKEN_STRING_VALUE:
        return parseString(scope);
      case TokenType.TOKEN_LBRACE:
        return parseBrace(scope);
      case TokenType.TOKEN_LBRACKET:
        return parseList(scope);
      default:
        throw UnexpectedTokenException('Unexpected ${curToken.value}');
        break;
    }
  }

  ASTNode parseTerm(Scope scope, {bool isFuncDefArgs = false}) {
    final tokenValue = curToken.value;

    if (isModifier(tokenValue)) {
      eat(TokenType.TOKEN_ID);
      if (tokenValue == Constants.FINAL) {
        return parseDefinition(scope, false, true, false, true);
      }

      return parseDefinition(scope, true, false, false, true);
    }

    if (isDataType()) {
      return parseDefinition(scope, false, false, false, true);
    }

    var node = parseFactor(scope, false);
    ASTNode astBinaryOp;

    if (curToken.type == TokenType.TOKEN_LPAREN) {
      node = parseFunctionCall(scope, node);
    }

    while (curToken.type == TokenType.TOKEN_DIV ||
        curToken.type == TokenType.TOKEN_MUL ||
        curToken.type == TokenType.TOKEN_LESS_THAN ||
        curToken.type == TokenType.TOKEN_GREATER_THAN ||
        curToken.type == TokenType.TOKEN_LESS_THAN_EQUAL ||
        curToken.type == TokenType.TOKEN_GREATER_THAN_EQUAL ||
        curToken.type == TokenType.TOKEN_EQUALITY ||
        curToken.type == TokenType.TOKEN_NOT_EQUAL) {
      final binaryOpOperator = curToken;
      eat(binaryOpOperator.type);

      astBinaryOp = initASTWithLine(BinaryOpNode(), lexer.lineNum);

      astBinaryOp.binaryOpLeft = node;
      astBinaryOp.binaryOperator = binaryOpOperator;
      astBinaryOp.binaryOpRight = parseFactor(scope, false);

      node = astBinaryOp;
    }
    return node;
  }

  /// parse expression
  ASTNode parseExpression(Scope scope, {bool isFuncDefArgs = false}) {
    var node = parseTerm(scope, isFuncDefArgs: isFuncDefArgs);
    ASTNode astBinaryOp;

    while (curToken.type == TokenType.TOKEN_PLUS ||
        curToken.type == TokenType.TOKEN_SUB ||
        curToken.type == TokenType.TOKEN_PLUS_PLUS ||
        curToken.type == TokenType.TOKEN_SUB_SUB ||
        curToken.type == TokenType.TOKEN_NOT ||
        curToken.type == TokenType.TOKEN_BITWISE_AND ||
        curToken.type == TokenType.TOKEN_BITWISE_OR ||
        curToken.type == TokenType.TOKEN_BITWISE_XOR ||
        curToken.type == TokenType.TOKEN_LSHIFT ||
        curToken.type == TokenType.NOSEEB_AWARE_OPERATOR ||
        curToken.type == TokenType.TOKEN_RSHIFT) {
      if (curToken.type == TokenType.TOKEN_PLUS_PLUS ||
          curToken.type == TokenType.TOKEN_SUB_SUB) {
        final binaryOp = curToken;
        eat(binaryOp.type);

        astBinaryOp = initASTWithLine(BinaryOpNode(), lexer.lineNum);
        astBinaryOp.scope = scope;

        astBinaryOp.binaryOpLeft = node;
        astBinaryOp.binaryOperator = binaryOp;
        astBinaryOp.binaryOpRight =
            parseTerm(scope, isFuncDefArgs: isFuncDefArgs);

        node = astBinaryOp;
      } else {
        final binaryOp = curToken;
        eat(binaryOp.type);

        astBinaryOp = initASTWithLine(BinaryOpNode(), lexer.lineNum);
        astBinaryOp.scope = scope;

        astBinaryOp.binaryOpLeft = node;
        astBinaryOp.binaryOperator = binaryOp;
        astBinaryOp.binaryOpRight =
            parseTerm(scope, isFuncDefArgs: isFuncDefArgs);

        node = astBinaryOp;
      }
    }

    while (curToken.type == TokenType.TOKEN_AND ||
        curToken.type == TokenType.TOKEN_OR) {
      final binaryOp = curToken;
      eat(binaryOp.type);

      astBinaryOp = initASTWithLine(BinaryOpNode(), lexer.lineNum);
      astBinaryOp.scope = scope;

      astBinaryOp.binaryOpLeft = node;
      astBinaryOp.binaryOperator = binaryOp;
      astBinaryOp.binaryOpRight = parseTerm(scope);

      node = astBinaryOp;
    }

    if (curToken.type == TokenType.TOKEN_QUESTION) {
      return parseTernary(scope, node);
    }

    return node;
  }

  /// parse break statement
  ASTNode parseBreak(Scope scope) {
    eat(TokenType.TOKEN_ID);

    return initASTWithLine(BreakNode(), lexer.lineNum);
  }

  /// parse next
  ASTNode parseNext(Scope scope) {
    eat(TokenType.TOKEN_ID);

    return initASTWithLine(NextNode(), lexer.lineNum);
  }

  /// parse new
  ASTNode parseNew(Scope scope) {
    eat(TokenType.TOKEN_ID);

    final ASTNode newAST = initASTWithLine(NewNode(), lexer.lineNum)
      ..newValue = parseExpression(scope);

    return newAST;
  }

  /// parse return
  ASTNode parseReturn(Scope scope) {
    eat(TokenType.TOKEN_ID);
    final ast = initASTWithLine(ReturnNode(), lexer.lineNum)
      ..scope = scope
      ..returnValue = parseExpression(scope) ?? NoSeebNode();

    return ast;
  }

  /// parse throw
  ASTNode parseThrow(Scope scope) {
    eat(TokenType.TOKEN_ID);
    final ast = initASTWithLine(ThrowNode(), lexer.lineNum)
      ..scope = scope
      ..throwValue = parseExpression(scope) ?? NoSeebNode();

    return ast;
  }

  /// if statement
  ASTNode parseIf(Scope scope) {
    final ast = initASTWithLine(IfNode(), lexer.lineNum);
    eat(TokenType.TOKEN_ID);
    eat(TokenType.TOKEN_LPAREN);

    ast.ifExpression = parseExpression(scope);

    eat(TokenType.TOKEN_RPAREN);

    ast.scope = scope;

    if (curToken.type == TokenType.TOKEN_LBRACE) {
      eat(TokenType.TOKEN_LBRACE);
      ast.ifBody = parseStatements(scope);
      eat(TokenType.TOKEN_RBRACE);
    } else {
      ast.ifBody = parseOneStatementCompound(scope);
    }

    if (curToken.value == Constants.ELSE) {
      eat(TokenType.TOKEN_ID);

      if (curToken.value == Constants.IF) {
        ast.ifElse = parseIf(scope);
        ast.ifElse.scope = scope;
      } else {
        if (curToken.type == TokenType.TOKEN_LBRACE) {
          eat(TokenType.TOKEN_LBRACE);
          ast.elseBody = parseStatements(scope);
          ast.elseBody.scope = scope;
          eat(TokenType.TOKEN_RBRACE);
        } else {
          final compound = initASTWithLine(CompoundNode(), lexer.lineNum);
          compound.scope = scope;
          final statement = parseStatement(scope);
          eat(TokenType.TOKEN_SEMI);
          compound.compoundValue.add(statement);

          ast.elseBody = compound;
          ast.elseBody.scope = scope;
        }
      }
    }

    return ast;
  }
